# meloid

./: .gitattributes  CHANGELOG.md  README.md  meloid.cabal
app/: Attrs.hs  Cmd.hs  Handle.hs  Image.hs  Main.hs  Sys.hs  Types.hs  Widgets.hs
app/Compat/: Ansi.hs  Image.hs  Software.hs  Term.hs
app/Types/: Actions.hs  Configs.hs  Core.hs  Helpers.hs  Identity.hs  Logging.hs  Model.hs  Schemas.hs
app/Types/Schemas/: Element.hs
app/Widgets/: Common.hs  Controls.hs  Edits.hs  Elements.hs  Image.hs  Images.hs  Layer.hs  Lists.hs  Views.hs
app/Widgets/Elements/: Common.hs  Element.hs  Header.hs  Scaffold.hs
app/Widgets/Visual/: Art.hs  EQ.hs  Spectrum.hs
assets/: config.schema.yaml  default-config.yaml  default-eq.txt
assets/pipewire/: meloid-eq.conf
tools/: update_config_yaml.py
