cabal-version:      3.0

name:               meloid

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           A beautiful TUI music player
-- description:
license:            MIT
license-file:       LICENSE
author:             Dexer Matters
maintainer:         dexermatters@gmail.com
category:           Sound
build-type:         Simple
extra-doc-files:    
  CHANGELOG.md
  README.md

extra-source-files:
  assets/config.schema.yaml
  assets/default-config.yaml
  assets/default-eq.txt
  assets/pipewire/meloid-eq.conf

data-files:
  tools/package.json
  tools/update_config_yaml.mjs

common warnings
  ghc-options: -Wall

executable meloid
  import:           warnings
  ghc-options:      -threaded
  main-is:          Main.hs
  other-modules:
    Attrs
    Utils
    Sys
    Image
    Cmd
    Types
    Types.Identity
    Types.Core
    Types.Model
    Types.Schemas
    Types.Helpers
    Types.Actions
    Types.Logging
    Types.Configs
    Handle
    Widgets
    Widgets.Common
    Widgets.Elements
    Widgets.Layer
    Widgets.Lists
    Widgets.Controls
    Widgets.Views
    Widgets.Edits
    Widgets.Visual.EQ
    Widgets.Visual.Art
    Compat.Image
    Compat.Term
    Compat.Ansi
    Compat.Software

    Paths_meloid

  -- other-extensions:
  build-depends:    
    base >=4.20.1.0, 
    mtl,
    containers,
    directory,
    process,
    transformers,
    template-haskell,

    -- Terminal UI packages
    brick,
    vty,
    text-zipper,
    text,

    -- Lens packages
    microlens-th,
    microlens-mtl,
    microlens,

    -- Media packages
    libmpd,

    -- Misc
    raw-strings-qq,
    time,
    stm,
    utf8-string,
    bytestring,
    vector,
    vector-algorithms,
    vty-crossplatform,

    -- Parsers
    aeson,
    yaml,
    megaparsec

  hs-source-dirs:   app
  default-language: GHC2024
